ffi/derive/tests/ui_fail/derive_skip_field.stderr
error[E0425]: cannot find function, tuple struct or tuple variant `FfiStruct__b` in this scope
  --> tests/ui_fail/derive_skip_field.rs:32:9
   |
10 |     #[ffi_export]
   |     ------------- similarly named function `FfiStruct__a` defined here
...
32 |         FfiStruct__b(IntoFfi::into_ffi(&s), b.as_mut_ptr());
   |         ^^^^^^^^^^^^ help: a function with a similar name exists: `FfiStruct__a`

error[E0425]: cannot find function, tuple struct or tuple variant `FfiStruct__set_b` in this scope
  --> tests/ui_fail/derive_skip_field.rs:34:9
   |
10 |     #[ffi_export]
   |     ------------- similarly named function `FfiStruct__set_a` defined here
...
34 |         FfiStruct__set_b(IntoFfi::into_ffi(&mut s), IntoFfi::into_ffi(*b));
   |         ^^^^^^^^^^^^^^^^ help: a function with a similar name exists: `FfiStruct__set_a`
